# tripo04os

./: BMAD_IMPLEMENTATION_COMPREHENSIVE.md  BMAD_IMPLEMENTATION_COMPREHENSIVE.md.old  BMAD_IMPLEMENTATION_COMPREHENSIVE_COMPLETE.md  BMAD_IMPLEMENTATION_PLAN.md  DEVELOPMENT.md  README.md  README_BMAD.md  TRIPO04OS_IMPLEMENTATION_SUMMARY.md  ai_support_technical_specification.md  bmad_analysis_complete_summary.md  bmad_analysis_phase1_diagnose.md  bmad_analysis_phase2_ideate.md  bmad_analysis_phase3_prototype.md  bmad_analysis_phase4_validate.md  bmad_analysis_phase5_implement.md  bmad_analysis_summary.md  bmad_implementation_action_plan.md  bmad_profit_optimization_addendum.md  docker-compose.yml  docker-compose.yml.backup  infrastructure_setup_configure_ci_cd_pipeline.md  infrastructure_setup_deploy_monitoring_platform.md  infrastructure_setup_deployment_automation_scripts.md  infrastructure_setup_kickoff_meeting.md  infrastructure_setup_monitoring_and_alerting.md  infrastructure_setup_provision_cloud_accounts.md  kong-docker-compose.yml  phase1_implementation_complete_summary.md  phase1_implementation_progress.md  phase1_project_charter.md  premium_driver_matching_prd.md  profit_optimization_engine_prd.md  specs103.md
admin_dashboard/: package.json
backend_services/fraud_service/: Dockerfile  go.mod  pyproject.toml
backend_services/fraud_service/app/: main.py
backend_services/fraud_service/cmd/: main.go
backend_services/fraud_service/databases/migrations/: 001_create_fraud_reports.down.sql  001_create_fraud_reports.up.sql  002_create_fraud_rules.down.sql  002_create_fraud_rules.up.sql  003_create_fraud_alerts.down.sql  003_create_fraud_alerts.up.sql
backend_services/fraud_service/internal/config/: config.go
backend_services/fraud_service/internal/database/: postgres.go
backend_services/fraud_service/internal/handlers/: fraud_handler.go  health_handler.go
backend_services/matching_service/: Dockerfile  TEST_SPECS.md  go.mod  main.py  pyproject.toml  requirements.txt
backend_services/matching_service/app/: __init__.py
backend_services/matching_service/cmd/: main.go
backend_services/matching_service/kubernetes/: deployment.yaml
backend_services/matching_service/lib/: matching-cache.js
backend_services/matching_service/tests/: conftest.py  test_api.py  test_matching_algorithm.py
(+519 files in other folders)
