[tool.poetry]
name = "fraud-service"
version = "0.1.0"
description = "Tripo04OS Fraud Service - Fraud detection and prevention"
authors = ["Tripo04OS Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
redis = "^4.6.0"
kafka-python = "^2.0.2"
confluent-kafka = "^2.3.0"
numpy = "^1.26.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.12.0"
flake8 = "^7.0.0"
mypy = "^1.7.1"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8010"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8010"
test = "pytest tests/ -v --cov=app --cov-report=html"
test:unit = "pytest tests/unit -v --cov=app"
test:integration = "pytest tests/integration -v --cov=app"
format = "black . && isort ."
lint = "flake8 ."
type-check = "mypy ."
